# Voicerec-By-Codex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  EFFICIENCY_REPORT.md  G1_5_research.md  LATEST_RESEARCH.md  QUESTIONS.md  README.md  TODO.md  TODO_GPU.md  TODO_INTEGRATION.md  install_deps.sh  install_postgres.sh
backend/: CONTEXT.md  alembic.ini  pyproject.toml
backend/app/: grpc_client.py  main.py
backend/app/api/: CONTEXT.md  auth.py  meeting.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/clients/: __init__.py  diarize_pb2.py  diarize_pb2_grpc.py  grpc_clients.py  summarize_pb2.py  summarize_pb2_grpc.py  transcribe_pb2.py  transcribe_pb2_grpc.py
backend/app/core/: CONTEXT.md  logging.py  security.py  settings.py
backend/app/db/: __init__.py  base.py  schema.py  session.py
backend/app/db/repositories/: __init__.py  base.py  meeting.py  transcript.py  user.py
backend/app/models/: __init__.py  _types.py  meeting.py  transcript.py  user.py
backend/app/services/: __init__.py  auth.py  meeting_processing.py  pipeline.py  transcript.py  transcript_service.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_api_auth.py  test_api_meeting.py  test_auth_dependency.py  test_db_fixtures.py  test_db_repositories.py  test_db_session.py  test_gpu_asr_service.py  test_grpc_client.py  test_grpc_tls.py  test_main.py  test_meeting_processing.py  test_pipeline_service.py  test_settings.py  test_transcript_service.py
backend/tests/db/: __init__.py  test_schema_version.py
backend/tests/fixtures/: diarize.json  summarize.json
backend/tests/gpu/: __init__.py  test_diarize_service.py  test_summarize_service.py
backend/tests/migrations/: test_migrations.py
(+82 files in other folders)
